--- a/css/popup.css
+++ b/css/popup.css
@@ -19,7 +19,7 @@ a:hover {
 body {
     width: 400px;
     margin: 0;
-    padding-top: 20px;
+    padding-top: 10px;
     font-family: arial;
     font-size: 14px;
 
@@ -29,6 +29,91 @@ body {
 #header {
     height: 50px;
     padding-left: 10px;
+    position: relative;
+    z-index: 999999;
+}
+
+#header .more {
+    border-left: 1px solid #ccc;
+    width: 30px;
+    height: 37px;
+    padding-top: 15px;
+    
+    position: absolute;
+    top: 1px;
+    right: 11px;    
+
+    text-align: center;
+    font-size: 20px;    
+
+    background: white;
+    color: #666;
+}
+
+#header .more:hover {
+    text-decoration: none;
+    cursor: pointer;
+    color: #333;
+
+    z-index: 99999;
+    
+    height: 39px;
+}
+
+#header .more > div {
+    display: none;
+
+    position: absolute;
+
+    top: 53px;
+    right: -1px;
+
+    width: 250px;
+
+    background: white;
+    border: 1px solid #ccc;
+    border-top: 0;
+
+    font-size: 16px;
+    text-align: left;
+
+    z-index: 9999;
+    opacity: 1;    
+}
+
+#header .more:hover > div {
+    display: block;
+}
+
+#header .more > div li {
+    padding: 10px;
+    color: #000;
+    opacity: 0.7;
+}
+
+#header .more > div li:hover {
+    opacity: 1;
+}
+
+#header .more > div span {
+    color: #555;
+    float: right;
+    font-size: 13px;
+}
+
+#header .more .edit_image_config {
+    border-top: 1px solid #ccc;
+    line-height: 12px;
+}
+
+#header .more .edit_image_config input {
+    vertical-align: middle;
+}
+
+#header .more .edit_image_config label {
+    cursor: pointer;
+    margin-left: 5px;
+    font-size: 14px;
 }
 
 #timeline {
@@ -117,6 +202,10 @@ body {
     position: relative;
 }
 
+#my_galleries li .action img {
+    opacity: 0.5;
+}
+
 #my_galleries li .action a {
     opacity: 0.7;
     cursor: pointer;
@@ -188,9 +277,13 @@ body {
     opacity: 0.8;
 }
 
-#take_screenshot.loading {
+.loading #take_screenshot {
     text-indent: -99999px;
     background: url(../images/loading.gif) center no-repeat;
+}
+
+.loading .more {
+    display: none;
 }
 
 h4 {
@@ -236,9 +329,7 @@ a.button:hover {
 
 #footer img {
     vertical-align: middle;
-    position: absolute;
-    left: 0px;
-    top: 0px;
+    margin-left: 10px;
 }
 
 #footer a.minus_link {
