--- a/css/popup.css
+++ b/css/popup.css
@@ -47,22 +47,27 @@ body {
     font-size: 20px;    
 
     background: white;
-    color: #666;
 }
 
-#header .more:hover {
+#header .more img {
+    opacity: 0.8;
+}
+
+#header .more.hover {
     text-decoration: none;
     cursor: pointer;
-    color: #333;
+    opacity: 1;
 
     z-index: 99999;
     
-    height: 39px;
+    height: 39px;    
+}
+
+#header .more.hover img {
+    opacity: 1;
 }
 
 #header .more > div {
-    display: none;
-
     position: absolute;
 
     top: 53px;
@@ -79,10 +84,6 @@ body {
 
     z-index: 9999;
     opacity: 1;    
-}
-
-#header .more:hover > div {
-    display: block;
 }
 
 #header .more > div li {
@@ -104,6 +105,11 @@ body {
 #header .more .edit_image_config {
     border-top: 1px solid #ccc;
     line-height: 12px;
+}
+
+#header .more .options {
+    cursor: pointer;
+    font-size: 14px;
 }
 
 #header .more .edit_image_config input {
@@ -151,6 +157,7 @@ body {
     margin: 0;
     height: auto;
     max-height: 400px;
+    min-height: 100px;
     width: 100%;
     overflow-x: hidden;
     
@@ -338,6 +345,14 @@ a.button:hover {
     right: 60px;
     width: 80px;
     font-size: 13px;
+}
+
+#footer .options {
+    font-size: 12px;
+    font-weight: bold;
+    color: #000;
+    opacity: 0.7;
+    margin-left: 10px;
 }
 
 #user, #signout {
