--- a/css/popup.css
+++ b/css/popup.css
@@ -17,68 +17,142 @@ a:hover {
 }
 
 body {
-    width: 400px;
+    width: 380px;
     margin: 0;
-    padding-top: 10px;
-    font-family: arial;
+    font-family: helvetica, arial;
     font-size: 14px;
 
     overflow: hidden;
+    background: url(../images/popup_bg.png) repeat-x;
 }
 
 #signin {
-    position: absolute; 
-    width: 350px; 
+    width: 542px; 
+    height: 330px !important;
     height: 100%; 
     background: white; 
+    border: 0px solid #ddd;    
+    border-top: 1px solid rgba(0,0,0,0);
+    border-bottom: 2px solid #ddd;        
+    border-radius: 3px;
     z-index: 9999999; 
-    padding-left: 50px;
+    background: url(../images/signup_bg.png);    
+}
+
+#signin .error {
+    color: red;
+    text-align: center;
+    font-weight: bold;
+    font-size: 14px;
+    height: 20px;
+}
+
+#signin .relative {
+    margin-top: 0px;
+}
+
+#signin form {
+    float: left;
+    position: relative;
+    width: 242px;
+    height: 220px;
+    padding-left: 28px;
+}
+
+#signin form h3 {
+    font-size: 19px;
+    font-family: helvetica, arial;
+    font-weight: bold;    
+    color: #666;
+    padding-bottom: 15px;
+}
+
+#signin form span {
+    display: block;
+    font-size: 13px;
+    color: #666;
+    opacity: 0.8;
+    padding-bottom: 8px;
     padding-top: 10px;
 }
 
-#signin a:hover {
-    text-decoration: none;
-    color: #333;
+#signin form label {
+    display: block;
+    font-size: 11px;
+    color: #666;
+}
+
+#signin form label input {
+    vertical-align: bottom;    
+}
+
+#signin .logo {
+    text-align: center;
+    background: url(../images/popup_logo.png?1) center no-repeat;
+    height: 44px;
+    padding: 15px;
+}
+
+#signin form.error input {
+    border: 1px solid red;
+}
+
+#signin form input[type=text], #signin form input[type=password] {
+    width: 195px;
+    border: 1px solid #ccc;
+    padding: 12px;
+    margin-bottom: 6px;
+}
+
+#signin form input[type=submit] {
+    position: absolute;
+    bottom: 0px;
+    right: 20px;
+
+    cursor: pointer;
+    background: url(../images/button_bg.png);
+    border: none;
+    width: 102px;
+    height: 32px;
+    padding: 6px 8px;
+    text-align: center;
+    font-weight: bold;
+    color: #363636;
+    font-size: 16px;
+}
+
+#signin form input[type=submit]:hover {
+    color: #f19600; 
 }
 
 #signin .signin {
-    position: absolute;
-    top: 10px;
-    right: 52px;
-    font-size: 14px;
+    background: url(../images/separator.png) center right no-repeat;
 }
 
-#signin .signin a {
-    font-weight: bold;
-    font-size: 18px;
-    margin-left: 5px;
-}
-
-#header {
-    height: 50px;
+#header {    
     padding-left: 10px;
     position: relative;
     z-index: 999999;
+    margin-top: 10px;
 }
 
 #header .more {
-    border-left: 1px solid #ccc;
-    width: 30px;
-    height: 37px;
-    padding-top: 15px;
+    width: 62px;
+    height: 47px;
     
     position: absolute;
-    top: 1px;
-    right: 11px;    
+    top: 0px;
+    right: 10px;    
 
     text-align: center;
     font-size: 20px;    
 
     background: white;
-}
 
-#header .more img {
-    opacity: 0.8;
+    
+    background-image: url(../images/gear.png), url(../images/take_screenshot.png);
+    background-repeat: no-repeat, repeat-x;    
+    background-position: center, top center;
 }
 
 #header .more.hover {
@@ -87,8 +161,15 @@ body {
     opacity: 1;
 
     z-index: 99999;
-    
-    height: 39px;    
+
+    background: white url(../images/gear.png) center 10px no-repeat;
+    border: 2px solid #666;
+    border-bottom: none;
+
+    width: 58px;
+    height: 47px;
+
+    box-shadow: 0 0 3px 1px #ccc;
 }
 
 #header .more.hover img {
@@ -98,39 +179,58 @@ body {
 #header .more > div {
     position: absolute;
 
-    top: 53px;
-    right: -1px;
+    top: 45px;
+    right: -2px;
 
-    width: 250px;
+    width: 225px;
 
     background: white;
-    border: 1px solid #ccc;
-    border-top: 0;
+    border: 2px solid #666;
 
     font-size: 16px;
     text-align: left;
-
+    
     z-index: 9999;
     opacity: 1;    
+    
+    box-shadow: 0 0 3px 1px #ccc;    
+    
+    padding-top: 8px;
+}
+
+#header .connector {
+    position: absolute;
+    right: -2px;
+    top: -5px;
+    height: 5px;
+    width: 58px;
+    background: white;
+    border-left: 2px solid #666;
+    border-right: 2px solid #666;
 }
 
 #header .more > div li {
-    padding: 10px;
-    color: #000;
-    opacity: 0.7;
-}
-
-#header .more > div li:hover {
-    opacity: 1;
-}
-
-#header .more > div span {
-    color: #555;
-    float: right;
+    padding: 8px 10px;
+    color: #999;
     font-size: 13px;
 }
 
+#header .more > div li:hover span, #header .more > div li:hover label {
+    color: #f7931e;
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+#header .more > div span {
+    float: right;
+    font-size: 12px;
+    color: #666;
+    font-weight: bold;
+}
+
 #header .more .edit_image_config {
+    margin-top: 10px;
+
     border-top: 1px solid #ccc;
     line-height: 12px;
 }
@@ -147,32 +247,43 @@ body {
 #header .more .edit_image_config label {
     cursor: pointer;
     margin-left: 5px;
-    font-size: 14px;
+    font-size: 11px;
+    text-transform: uppercase;
+    vertical-align: middle;
 }
 
 #timeline {
-    padding-left: 10px;
-    padding-top: 15px;
+    background: url(../images/dashboard.png);
+    margin: 0px 10px;
+    height: 22px;
+    width: 361px;    
+    text-transform: uppercase;
+
+    font-size: 12px;
+    
+    color: #999;
+    font-weight: bold;
+
+    padding-top: 7px;
+
+    cursor: default;
+
+    font-weight: bold;
 }
 
 #timeline span {
-    font-size: 16px;
-    margin-right: 15px;
-    font-weight: bold;
-    opacity: 0.8;
+    margin-right: 33px;
+    margin-left: 15px;
 }
 
 #timeline a {
-    font-size: 16px;
-    color: #333;
-    margin-right: 10px;
+    color: #999;
+    margin-right: 16px;
     cursor: pointer;
-    opacity: 0.8;
 }
 
 #timeline a.active {
-    font-weight: bold;
-    opacity: 1;
+    color: #333;
 }
 
 
@@ -184,7 +295,7 @@ body {
 #galleries_container {
     margin: 0;
     height: auto;
-    max-height: 400px;
+    max-height: 380px;
     min-height: 100px;
     width: 100%;
     overflow-x: hidden;
@@ -201,32 +312,31 @@ body {
 }
 
 #my_galleries li {
-    padding: 5px;
-    padding-top: 10px;
-    border-radius: 2px;
+    padding: 8px;
+    margin-top: 5px;
+    margin-bottom: 10px;
 
-    border-bottom: 1px solid #aaa;
+    border: 1px solid #cecece;
+    box-shadow: 0 0 3px 1px rgba(200,200,200, 0.3);
 
     position: relative;
 
     margin-left: 10px;
     margin-right: 10px;
+
+    width: 324px;
+    height: 60px;
     
     background: #fff;
-}
-
-#my_galleries li:hover {
-    background-color: #eee;
-}
-
-#my_galleries li:hover .name {
-    opacity: 1;
+    font-weight: bold;
 }
 
 #my_galleries li.loader {
     background: url(../images/loading.gif) center no-repeat;
-    border: none;
+    margin-left: 30px;
     height: 30px;
+    box-shadow: none;
+    border: none;
 }
 
 #my_galleries li .preview {
@@ -238,16 +348,16 @@ body {
 }
 
 #my_galleries li .action img {
-    opacity: 0.5;
+    position: absolute;
+    top: -9px;
+    right: -9px;
 }
 
 #my_galleries li .action a {
-    opacity: 0.7;
     cursor: pointer;
 }
 
 #my_galleries li .action a:hover {
-    opacity: 1;
 }
 
 #my_galleries li .creator {
@@ -257,23 +367,18 @@ body {
 }
 
 #my_galleries li .creator a {
-    color: #333;
+    color: #f19600;
     cursor: pointer;
 }
 
 #my_galleries .name {
-    max-width: 245px;
+    max-width: 215px;
     display: inline-block;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
-    color: #000;
-    font-size: 16px;
-    opacity: 0.8;
-}
-
-#my_galleries .name:hover {
-    opacity: 1;
+    color: #333;
+    font-size: 15px;
 }
 
 #my_galleries .share_link {
@@ -281,35 +386,46 @@ body {
     width: 185px;
 }
 
-#my_galleries .edit {
-    position: absolute;
-    right: 5px;
-    bottom: 5px;
-}
-
-#my_galleries .edit img {
-    margin-right: 3px;
-    vertical-align: middle;
-    font-size: 12px;
-}
-
 #my_galleries .items {
-    margin-right: 5px;
-    font-size: 10px;
+    margin-right: 0px;
+    font-size: 12px;
     font-family: Arial;
     color: #999;
     white-space: nowrap;
     cursor: default;
 }
 
+#my_galleries .items.dot {
+}
+
 #take_screenshot {
     display: block;
-    width: 350px;
+    width: 286px;
 
-    font-size: 25px;
+    cursor: pointer;
+
+    font-size: 22px;
     font-weight: bold;
 
-    opacity: 0.8;
+    color: #666;
+    
+    background-image: url(../images/btn_camera_gray.png), url(../images/take_screenshot.png);
+    background-repeat: no-repeat, repeat-x;    
+    background-position: 15px 12px, top left;
+
+    border: 0 !important;
+    padding: 10px 15px;    
+    padding-left: 60px;
+
+    padding-bottom: 10px;
+
+    text-align: left;
+}
+
+#take_screenshot:hover {
+    color: #333;
+    
+    background-image: url(../images/btn_camera_normal.png), url(../images/take_screenshot.png);
 }
 
 .loading #take_screenshot {
@@ -354,8 +470,14 @@ a.button:hover {
 #footer {
     clear: both;
     height: 25px;
+    margin-top: 5px;
+    padding-top: 6px;
+    padding-bottom: 9px;    
+    margin-left: 10px;
+
     position: relative;
-    padding-top: 15px;
+
+    background: url(../images/bottom.png) top left no-repeat;    
 }
 
 #footer * {
@@ -384,14 +506,14 @@ a.button:hover {
 }
 
 #user, #signout {
-    font-size: 14px;
-    color: #000;
-    cursor: pointer;
+    font-size: 11px;
     font-weight: bold;
-    text-decoration: none;   
-    float: right;
-    margin-right: 10px;
-    opacity: 0.8;
+    color: #999;
+    margin-right: 18px;
+    float: right;    
+    padding-top: 3px;
+
+    text-transform: uppercase;
 }
 
 #user {
@@ -400,8 +522,8 @@ a.button:hover {
 }
 
 #user:hover, #signout:hover {
-    text-decoration: underline;
-    opacity: 1;
+    color: #333;
+    text-decoration: none;
 }
 
 #signout {
@@ -437,7 +559,17 @@ a.button:hover {
 /************* Scrollbar ***************/
 .jspVerticalBar
 {
-	right: -3px;
+	right: 6px;
+    border-radius: 3px;
+    background-color: #cbcbcd;
+}
+
+.jspDrag {
+    background: url(../images/scroll.png) no-repeat;
+    width: 15px;
+    height: 87px;
+
+    left: -3px;
 }
 
 /********** Opera css ***********/
