--- a/css/options.css
+++ b/css/options.css
@@ -2,7 +2,7 @@ body {
     width: 600px;
     margin: 0 auto;
     padding-top: 50px;
-    font-family: Arial;
+    font-family: Helvetica, Arial;    
 }
 
 img {
@@ -32,6 +32,11 @@ img {
     margin-top: 30px;
 }
 
+.options .shortcuts select {
+    position: absolute;
+    z-index: 9999;
+}
+
 .options .shortcuts li {
     margin-top: 20px;
     font-size: 16px;
@@ -42,48 +47,11 @@ img {
     width: 200px;
 }
 
-.options ul.icon_type li {
-    display: inline-block;
-    width: 40px;
-    margin-right: 30px;
-    margin-top: 10px;
+.options input[type=text] {
+    width: 20px;
+    padding: 3px;
 }
 
-.options ul.icon_type label {
-    text-align: center;
-    cursor: pointer;
+.firefox .shortcuts .selected {
+    display: none;
 }
-
-.options ul.icon_type input {
-    margin-left: 8px;
-    cursor: pointer;
-}
-
-
-            a.minus_button {
-                font-family: helvetica, arial, sans-serif;
-                background: #04C url(/smedia/minus/images/alert-overlay.png) repeat-x;                
-                display: inline-block;
-                color: white;
-                text-decoration: none;
-                -moz-border-radius: 5px;
-                -webkit-border-radius: 5px;
-                -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
-                -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
-                text-shadow: 0 -1px 1px rgba(0, 0, 0, 0.25);
-                border-bottom: 1px solid rgba(0, 0, 0, 0.25);
-                position: relative;
-                cursor: pointer;
-                padding: 5px 10px 6px;
-
-                font-size: 16px;
-                font-weight: 700;
-                line-height: 1;
-                text-shadow: 0 -1px 1px rgba(0, 0, 0, 0);
-
-                margin-left: 0px;
-            }
-
-            a.minus_button:hover {
-                background-color: #26F;
-            }
